<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--顶部导航栏-->
    <RelativeLayout
        android:id="@+id/rl_browser_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/white"
        android:paddingStart="@dimen/title_bar_padding">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_back_black"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/img_back"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/color_333333"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tv_close_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/close"
            android:textColor="@color/color_333333"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_webview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--进度条-->
        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/browser_progress_bg"
            android:visibility="gone" />

        <!--Webview-->
        <WebView
            android:id="@+id/web_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <!--空数据、加载失败页-->
    <LinearLayout
        android:id="@+id/ll_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_empty"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/bg_no_net" />

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/network_error_no_net"
            android:textColor="@color/gray" />
    </LinearLayout>
</LinearLayout>