<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_center"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/corners_white_shape"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/prompt"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ScrollView
            android:id="@+id/center_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/tv_content"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edt_input"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/stroke_gray_white_shape"
                    android:gravity="center"
                    android:minWidth="240dp"
                    android:textCursorDrawable="@null"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_left"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/corners_left_white_gray_selecter"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/btn_line"
                    style="@style/VerticalLine" />

                <Button
                    android:id="@+id/btn_right"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/corners_right_white_gray_selecter"
                    android:text="@string/confirm"
                    android:textColor="@color/theme"
                    android:textSize="18sp" />

            </LinearLayout>

            <View style="@style/HorizontalLine" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">


        <ScrollView
            android:id="@+id/bottom_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fadeScrollbars="true"
            android:fadingEdge="none">

            <LinearLayout
                android:id="@+id/ll_context"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical" />
        </ScrollView>

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_of_btn_selector"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/gray"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>